# Wharf-Bot

./: Makefile  pyproject.toml
eddy_bot/: __main__.py  eddy.py
eddy_bot/cogs/: chat.py  movies.py
maury_bot/: maury.py
maury_bot/cogs/: voice.py
maury_bot/services/: elevenlabs.py
